Fixed some PMD-warnings, mostly integer-instantiation...